[project]
name = "backtesting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zackjyoung3", email = "zackjyoung3@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
